--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -18,25 +18,36 @@
 }
 
 .movie__time {
-  margin: 0;
+  display: block;;
+  margin: 0 0 0 7px;
   font-size: 13px;
   line-height: 18px;
   color: #8B8B8B;
+  white-space: nowrap;
 }
 
 .movie__title {
+  max-width: calc(100% - 65px);
   margin: 0;
   padding-bottom: 9px;
   font-weight: 500;
   font-size: 15px;
   line-height: 18px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.movie__trailerlink {
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
 }
 
 .movie__poster {
   display: block;
-  width: auto;
   height: 200px;
-  object-fit: cover;
+  overflow: hidden;
 }
 
 .movie__btn {
