--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -44,6 +44,18 @@
   cursor: pointer;
 }
 
+.form__btn-disabled {
+  height: 45px;
+  border: none;
+  padding: 0;
+  border-radius: 3px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  background: #F8F8F8;
+  color: #C2C2C2;
+}
+
 .auth__text {
   margin: 16px auto 0;
   font-size: 14px;
