--- a/src/components/Navigation/Menu/BurgerMenu.css
+++ b/src/components/Navigation/Menu/BurgerMenu.css
@@ -23,6 +23,7 @@
   left: 0;
   visibility: hidden;
   transition: visibility 0.4s, opacity 0.3s ease-in-out;
+  z-index: 1;
 }
 
 .navigation__burger-container_open {
