--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -10,32 +10,62 @@
   font-weight: 500;
   font-size: 24px;
   line-height: 29px;
-  margin-bottom: 123px;
+  margin-bottom: 110px;
 }
 
 .profile__form {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
 
+.profile__container {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(66, 66, 66, 1);
+  width: 410px;
+}
+
+.profile__container:last-of-type {
+  border-bottom: none;
 }
 
 .profile__label {
+  display: flex;
+  position: relative;
   font-weight: 500;
   font-size: 11px;
   line-height: 13px;
-  width: 410px;
-  display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #424242;
-  padding-bottom: 16px;
-  margin-bottom: 17px;
+  text-align: center;
+  margin-bottom: 16px;
+  margin-top: 16px;
+}
+
+.profile__input:-webkit-autofill,
+.profile__input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #202020 inset !important;
+  padding: 10px;
+}
+
+.profile__input:-webkit-autofill:hover,
+.profile__input:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0 30px #323131 inset !important;
+  padding: 10px;
+}
+
+.profile__input:-webkit-autofill {
+  -webkit-text-fill-color: white !important;
 }
 
 
 .profile__input {
   padding: 0;
+  width: 200px;
   font-weight: 500;
   font-size: 11px;
   line-height: 13px;
@@ -44,13 +74,22 @@
   outline: none;
   background-color: transparent;
   text-align: right;
+  border-radius: 8px;
 }
 
-.profile__label_not-line {
+.profile__input:focus {
+  position: absolute;
+  right: 0;
+  padding: 10px 10px;
+  text-align: left;
+  background: #323131;
+}
+
+/* .profile__label_not-line {
   border-bottom: none;
   margin-bottom: 0;
   padding-bottom: 0;
-}
+} */
 
 .profile__btn {
   font-size: 13px;
@@ -63,6 +102,20 @@
   background: none;
   cursor: pointer;
   margin-top: 220px;
+  opacity: .4;
+}
+
+.profile__btn_activ {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.profile__input-error {
+  max-width: 410px;
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: 400;
+  color: #EE3465;
 }
 
 .profile__link {
@@ -88,10 +141,6 @@
     margin-bottom: 96px;
   }
 
-  .profile__label {
-    width: 260px;
-  }
-
   .profile__btn {
     margin-top: 210px;
     font-size: 12px;
@@ -106,6 +155,14 @@
 
   .profile__title {
     margin-bottom: 80px;
+  }
+
+  .profile__container {
+    width: 260px;
+  }
+
+  .profile__input-error {
+    max-width: 260px;
   }
 
   .profile__btn {
