--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -18,24 +18,18 @@
 }
 
 .movie__time {
-  display: block;;
-  margin: 0 0 0 7px;
+  margin: 0;
   font-size: 13px;
   line-height: 18px;
   color: #8B8B8B;
-  white-space: nowrap;
 }
 
 .movie__title {
-  max-width: calc(100% - 65px);
   margin: 0;
   padding-bottom: 9px;
   font-weight: 500;
   font-size: 15px;
   line-height: 18px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .movie__trailerlink {
@@ -46,8 +40,9 @@
 
 .movie__poster {
   display: block;
+  width: 100%;
   height: 200px;
-  overflow: hidden;
+  object-fit: cover;
 }
 
 .movie__btn {
@@ -103,7 +98,6 @@
 
 @media (max-width: 475px) {
   .movie__poster {
-    width: auto;
     height: 168px;
   }
 }
